2004-11-08    <mschimek@users.sf.net>

	* libvbi/exp-gfx.c (DRAW_CHAR): Double width bpl fix.
	* libvbi/teletext.c (level_one_row): Wide char fix.

2004-11-07    <mschimek@users.sf.net>

	* libvbi/teletext.c: Fixed TOP navigation.
	(vbi3_page_get_teletext_link): Fixed.
	* libvbi/teletext_decoder.c (top_page_stat): Must override
	  guessed normal page type.
	* plugins/teletext/main.c (py_ttx_open_new): Default to GConf
	  home_page instead of 100.
	* plugins/teletext/view.c (redraw_view): Make sure we have
	  a page image even before the window was realized, prevents
	  display of only header patch. While scanning show requested
	  not current pgno in toolbar.
	(expose_event): No resize_scaled_page_image() needed here.
	(monitor_pgno): Draw "loading" image if we have no page.	  
	(resize_scaled_page_image): Redraw "loading" image if we have
	  no page.
	(teletext_view_load_page, view_vbi3_event_handler,
	  teletext_view_switch_network): Reset view charset only on
	  network changes.

2004-11-03    <mschimek@users.sf.net>

	* libvbi/teletext_decoder.c (decode_packet_0): Parallel
	  transmission fix.
	* plugins/teletext/view.c (class_init): live_clock key name fixed.

2004-11-02    <mschimek@users.sf.net>

	* zapping.desktop.in: Added Terminal, StartupNotify, Categories
	  from patch by Pino Toscano.
	* configure.in: Libzvbi requirement changed to 0.2.9 for proxy
	  routines, and checked with pkg-config. Note 0.2.9 is the first
	  version installing a zvbi-0.2.pc file. Added glibc 2.1 /
	  libunicode check from libzvbi for libvbi/search.c.
	(AC_OUTPUT): Added libvbi/Makefile.
	* src/Makefile.am (INCLUDES): Added -D_GNU_SOURCE - we _want_
	  to use GNU extensions, but don't _depend_ on them.
	* common/Makefile.am (libcommon_a_SOURCES): Added intl-priv.h.
	* common/intl-priv.h: New common localization header.
	* Makefile.am (SUBDIRS): Added libvbi.
	* libvbi: Update from libzvbi CVS for the Teletext plugin. Will